--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name = "viewport" content="width= device-width , initial-scale=1.0">
         <!---  === CSS FILE === --->
         <link rel= "stylesheet" href="style1.css">
-        <title> Personal Portfolio Website   </title>
+        <title>  Portfolio Website   </title>
         <body>
 
             <!--- Header Start   -->
